# legion_transform

./: Cargo.toml  README.md
benches/: local_to_world.rs
examples/: hierarchy.rs  types_of_transforms.rs
src/: dynamic_array.rs  hierarchy_maintenance_system.rs  lib.rs  local_to_parent_system.rs  local_to_world_propagate_system.rs  local_to_world_system.rs  missing_previous_parent_system.rs  parent_system.rs  parent_update_system.rs  systems.rs  transform_system.rs  transform_system_bundle.rs
src/components/: children.rs  local_to_parent.rs  local_to_world.rs  mod.rs  non_uniform_scale.rs  parent.rs  rotation.rs  scale.rs  transform.rs  translation.rs
