[package]
name = "legion_transform"
version = "0.3.0"
authors = ["Alec Thilenius <alec@thilenius.com>"]
edition = "2018"

license = "MIT"

[dependencies]
legion = { git = "https://github.com/jaynus/legion.git", branch = "systems" }
log = "0.4"
nalgebra = { version = "0.18.1", features = ["serde-serialize", "mint"] }
serde = { version = "1", features = ["derive"] }
smallvec = "0.6"

[dev-dependencies]
env_logger = "0.7"
